--- a/package.json
+++ b/package.json
@@ -1,30 +1,72 @@
 {
-  "name": "upworkscrapperwindows",
+  "name": "upworkpatrol",
+  "productName": "UpworkPatrol",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
+  "build": {
+    "appId": "sodiya.sms.app",
+    "icon": "/images/wumi-icon.png"
+  },
   "scripts": {
-    "start:dev": "SET NODE_ENV=development& node index.js",
-    "start": "electron ./"
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make --arch=x64",
+    "publish": "electron-forge publish",
+    "dist": "electron-builder",
+    "lint": "echo \"No linting configured\""
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": {
+    "name": "Azeez Abdulsalam",
+    "email": "azeezade04@gmail.com"
+  },
+  "license": "MIT",
+  "config": {
+    "forge": {
+      "packagerConfig": {
+        "asar": true
+      },
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "Wumi-SMS-App"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin",
+            "win32",
+            "win64"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ]
+    }
+  },
   "dependencies": {
-    "dotenv": "^16.0.1",
-    "html-to-text": "^8.2.0",
-    "nodemailer": "^6.7.5",
-    "nodemailer-sendgrid": "^1.0.3",
-    "proxies-generator": "^1.0.6",
-    "pug": "^3.0.2",
-    "puppeteer": "^14.1.0",
-    "puppeteer-extra": "^3.3.4",
-    "puppeteer-extra-plugin-recaptcha": "^3.5.0",
-    "puppeteer-extra-plugin-stealth": "^2.9.0",
-    "random-useragent": "^0.5.0",
-    "telegraf": "^4.8.4"
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.3",
+    "electron-reload": "^2.0.0-alpha.1",
+    "electron-squirrel-startup": "^1.0.0"
   },
   "devDependencies": {
-    "electron": "^23.1.0"
+    "@electron-forge/cli": "^6.0.0-beta.63",
+    "@electron-forge/maker-deb": "^6.0.0-beta.63",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.63",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
+    "@electron-forge/maker-zip": "^6.0.0-beta.63",
+    "electron": "^19.1.9",
+    "electron-builder": "^23.6.0",
+    "electron-packager": "^15.5.1"
   }
 }
