--- a/settings.json
+++ b/settings.json
@@ -8,7 +8,7 @@
   "user": {
     "name": "User",
     "email": "",
-    "chatId": "",
+    "chatId": 1150873735,
     "queryStrings": ["google sheet"]
   }
 }
