Push some updated

--- a/settings.json
+++ b/settings.json
@@ -9,6 +9,6 @@
     "name": "User",
     "email": "",
     "chatId": 1150873735,
-    "queryStrings": ["google sheet"]
+    "queryStrings": ["web scraping"]
   }
 }
